--- a/my_tests/Makefile
+++ b/my_tests/Makefile
@@ -5,7 +5,8 @@ all:
 	ocamlopt popcont.o a.cmx -o hello1.exe
 	./hello1.exe
 clean:
-	$(RM) *.cm[iox] *.s *.annot *.o *.out
+	$(RM) *.cm[iox] *.s *.annot *.o *.out ./diff popcont *.S
+
 diff:
 	OPAMSWITCH=5.2.0+trunk opam exec -- ocamlopt -annot -S -c  a.ml 
 	OPAMSWITCH=5.2.0+trunk opam exec -- ocamlopt -v
@@ -14,14 +15,18 @@ diff:
 	/Users/azat/Desktop/my_proj/ocaml/ocamlopt --version 
 	cp a.s patched.S
 	diff -u vanilla.S patched.S > diff
+
 riscv_diff:
+	../boot/ocamlrun ../ocamlopt --version 
+	#gcc-13 popcont.c -c -I ../runtime
+	../boot/ocamlrun ../ocamlopt -I ../stdlib -ccopt -I../runtime popcont.c a.ml -o popcont.exe
+	../boot/ocamlrun ../ocamlopt -I ../stdlib -S -c a.ml
+	mv a.s riscv_patched.s
 	OPAMSWITCH=5.2.0+trunk opam exec -- ocamlopt -annot -S -c  a.ml 
 	OPAMSWITCH=5.2.0+trunk opam exec -- ocamlopt -v
-	cp a.s riscv_vanilla.S
-	../boot/ocamlrun ../ocamlopt -I ../stdlib -S -c a.ml
-	../boot/ocamlrun ../ocamlopt --version 
-	cp a.s riscv_patched.S
-	diff -u riscv_vanilla.S riscv_patched.S > diff
+	mv a.s riscv_vanilla.s
+	diff -u riscv_vanilla.s riscv_patched.s
+
 comp:
 	gcc -c popcont.c -I `ocamlc -where`
 	ocamlopt popcont.o a.cmx -o hello1.exe
