--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,8 @@
 #**************************************************************************
 
 # general patterns
-
+.ocamlformat
+/my_tests
 *.o
 *.a
 *.so
