--- a/.github/workflows/hygiene.yml
+++ b/.github/workflows/hygiene.yml
@@ -62,24 +62,24 @@ jobs:
           '${{ github.event.after }}'
         if: ${{ always() }}
 
-#      - name: Check that no ignored files have been committed
-#        run: tools/ci/actions/check-no-ignored-files.sh
-#        if: ${{ always() }}
+      - name: Check that no ignored files have been committed
+        run: tools/ci/actions/check-no-ignored-files.sh
+        if: ${{ always() }}
 
-#     - name: check-typo revered
-#        run: >-
-#          tools/ci/actions/check-typo.sh
-#          '${{ github.ref }}'
-#          '${{ github.event_name }}'
-#          '${{ github.event.pull_request.base.ref }}'
-#          '${{ github.event.pull_request.base.sha }}'
-#          '${{ github.event.pull_request.head.ref }}'
-#          '${{ github.event.pull_request.head.sha }}'
-#          '${{ github.event.ref }}'
-#          '${{ github.event.before }}'
-#          '${{ github.event.ref }}'
-#          '${{ github.event.after }}'
-#        if: ${{ always() }}
+     - name: check-typo revered
+        run: >-
+          tools/ci/actions/check-typo.sh
+          '${{ github.ref }}'
+          '${{ github.event_name }}'
+          '${{ github.event.pull_request.base.ref }}'
+          '${{ github.event.pull_request.base.sha }}'
+          '${{ github.event.pull_request.head.ref }}'
+          '${{ github.event.pull_request.head.sha }}'
+          '${{ github.event.ref }}'
+          '${{ github.event.before }}'
+          '${{ github.event.ref }}'
+          '${{ github.event.after }}'
+        if: ${{ always() }}
 
       - name: check-typo on whole tree
         run: tools/check-typo
