--- a/my_tests/Makefile
+++ b/my_tests/Makefile
@@ -1,21 +1,12 @@
-.PHONY: diff
-all:
-	gcc -c popcont.c -I `ocamlc -where`
-	ocamlopt -annot -S -c a.ml -o a.S
-	ocamlopt popcont.o a.cmx -o hello1.exe
-	./hello1.exe
 clean:
 	$(RM) *.cm[iox] *.s *.annot *.o *.out ./diff popcont *.S
-
+.PHONY: diff
 diff:
-	OPAMSWITCH=5.2.0+trunk opam exec -- ocamlopt -annot -S -c  a.ml 
-	OPAMSWITCH=5.2.0+trunk opam exec -- ocamlopt -v
+	OPAMSWITCH=5.1.0 opam exec -- ocamlopt -annot -S -c  a.ml
 	cp a.s vanilla.S
-	/Users/azat/Desktop/my_proj/ocaml/ocamlopt  -S -c  a.ml
-	/Users/azat/Desktop/my_proj/ocaml/ocamlopt --version 
+	../boot/ocamlrun ../ocamlopt -I ../stdlib -zbb -thead -S -c a.ml
 	cp a.s patched.S
-	diff -u vanilla.S patched.S > diff
-
+	diff -u vanilla.S a.s > diff
 riscv_diff:
 	../boot/ocamlrun ../ocamlopt --version 
 	#gcc-13 popcont.c -c -I ../runtime
@@ -26,15 +17,7 @@ riscv_diff:
 	OPAMSWITCH=5.2.0+trunk opam exec -- ocamlopt -v
 	mv a.s riscv_vanilla.s
 	diff -u riscv_vanilla.s riscv_patched.s
-
-comp:
-	gcc -c popcont.c -I `ocamlc -where`
-	ocamlopt popcont.o a.cmx -o hello1.exe
-	./hello1.exe
 norm_comp:
-	../boot/ocamlrun ../ocamlopt -zbb -thead -I ../stdlib -ccopt -I../runtime popcont.c a.ml -o popcont.exe -verbose
+#	../boot/ocamlrun ../ocamlopt -zbb -thead -I ../stdlib -ccopt -I../runtime popcont.c a.ml -o popcont.exe -verbose
 	../boot/ocamlrun ../ocamlopt -I ../stdlib -zbb -thead -S -c a.ml
 	mv a.s riscv_patched.s
-configure:
-	AS="as -misa-spec=20191213 -march=rv64imafdc_zicsr_zifencei_xtheadba"  CC=gcc-13 \
-		../configure  --disable-ocamldoc  --disable-unix-lib --disable-ocamltest --disable-str-lib --disable-systhreads --disable-debug-runtime
