add simple scalar vector len 4 sum

--- a/my_tests/Makefile
+++ b/my_tests/Makefile
@@ -25,3 +25,6 @@ vec:
 	../boot/ocamlrun ../ocamlopt -I ../stdlib -S -c vec.ml
 def:
 	../boot/ocamlrun ../ocamlopt -I ../stdlib -S -c default_vec.ml
+
+bin:
+	../boot/ocamlrun ../ocamlopt -I ../stdlib -c vec.ml -o aaa
